--- a/Cart File/Lua Source/tanks/TODO
+++ b/Cart File/Lua Source/tanks/TODO
@@ -1,27 +1,35 @@
 -----------------
       NEEDS
 -----------------
- 
- = PLAYER =
-
-- Player Armor / Shield
-- Use kits / power-ups
-  + shield replenishes shield
-  + health pack replenishes health
-  + ammo replenishes ammo
-  + fuel repleneshis fuel
-
  = WORLD =
 - Select a random level from the setting pool,
 - if rounds > 4 then move into next setting
 
 
 = MENUS = 
-- Shop at end of round
+
 - Allow players to use kits at mid-round
 - (with pause menu maybe?)
 - Use player money to buy items
 
+
+
+-----------------
+      DONE
+-----------------
+
+ = PLAYER =
+- Player Currency
+  + (deduce for purchase) (add for hit)
+- Player Points
+  + (add for hit) (compare for round win)
+- Player Armor / Shield
+- Use kits / power-ups
+  + shield replenishes shield
+  + health pack replenishes health
+  + ammo replenishes ammo
+  + fuel repleneshis fuel Choose the settings at main menu
+- Choose number of rounds at main menu
 
 - When showing the shop menu at end of round, we need to disable player controls
 - Then use the arrow keys and z or x to select an item \ kit \ upgrade to buy
@@ -29,13 +37,4 @@
 - Lets start by showing the shop menu at the end of a round, for this we switch to game
 - state 2 and switch back to 3
 
------------------
-      DONE
------------------
-
-- Player Currency
-  + (deduce for purchase) (add for hit)
-- Player Points
-  + (add for hit) (compare for round win)
-- Choose the settings at main menu
-- Choose number of rounds at main menu
+- Shop at end of round
